--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django~=4.2.3
 environs~=9.5.0
 aiogram~=2.25.1
-
+django-crispy-forms~=2.0
 asgiref~=3.7.2
-Pillow==9.0.*
-more-itertools==9.1.0
+Pillow~=9.0.*
+more-itertools~=9.1.0
