--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ more-itertools~=9.1.0
 yookassa~=2.4.0
 var_dump~=1.2
 yandex_checkout~=1.6.5
+requests==2.28.1
+django-crispy-forms==2.0
+crispy_bootstrap4==2022.1
+yookassa==2.4.0
