--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-crispy-forms~=2.0
 asgiref~=3.7.2
 Pillow==9.0.*
 more-itertools~=9.1.0
-yookassa~=2.4.0
+yookassa==2.4.0
 var_dump~=1.2
 requests==2.28.1
 django-crispy-forms==2.0
